tests/compile_fail/extern_module_macro_empty.stderr
error: extern_module! must contain at least one port
 --> tests/compile_fail/extern_module_macro_empty.rs:7:16
  |
7 |         design EmptyVendor {}
  |                ^^^^^^^^^^^
